fixing issue of welocme screen menue not showing after fixing tags not clicking issue

--- a/css/style.css
+++ b/css/style.css
@@ -681,3 +681,7 @@ footer {
     pointer-events: auto; /* Let inner links still be clickable */
   }
 }
+
+.blog-page .overlay {
+  pointer-events: none;
+}
